# riff-cli

./: .envrc  .gitignore  .hookrc  .venv  2025-09-12-nos-400.txt  AGENTS.md  ALIGN_COHERENCE_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE-DATA-SCHEMA.yaml  CURRENT_STATE_SUMMARY.md  EXPLORATION_REPORT.md  FEDERATION_INTEGRATION_BRIDGE.md  LICENSE  Makefile  PHASE_1_2_VALIDATION_REPORT.md  PREPARATION_SUMMARY.md  QUICK_REFERENCE_2025-10-28.md  README.md  RIFF_ANALYSIS_INDEX.md  RIFF_CLI_ANALYSIS.md  RIFF_REPAIR_THEORY_ANALYSIS.md  SEMANTIC_RELATIONSHIP_DIAGRAM.md  SURREALDB_ACTIVATION_SUMMARY.md  THEORY_ANALYSIS_SUMMARY.md  TODO.md  Taskfile.test.yaml  Taskfile.yml  _EXPLORATION_INDEX.md  install.sh  manifest.toml  pyproject.toml  pytest.ini  qdrant_exploration_results.json  requirements-dev.txt  riff  riff.spec  riff_cli_wrapper.py  test_dag_comprehensive.py  tmp.J1U41IBYgx
-wip/: BINARY_RELEASE_CHECKLIST.md  BINARY_RELEASE_INDEX.md  BINARY_RELEASE_SUMMARY.txt  CONSOLIDATION_COMPANION.md  DELIVERABLES.md  DUPLICATE_HANDLER_GUIDE.md  DUPLICATE_HANDLER_IMPLEMENTATION.md  DUPLICATE_HANDLER_README.md  DUPLICATE_HANDLER_SUMMARY.md  DUPLICATE_TOOL_RESULT_IMPLEMENTATION_GUIDE.md  ENTERPRISE_ARCHITECTURE_ASSESSMENT.md  EXPLORATION_SUMMARY.txt  FINAL_DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  MANIFEST_ADAPTER_ARCHITECTURE.md  MANIFEST_AUTO_REINDEX_GUIDE.md  NABI_EXPLORATION_INVENTORY.md  NABI_QUICK_REFERENCE.md  PHASE1_PROGRESS_SUMMARY.md  PHASE1_SURREALDB_ACTIVATION_COMPLETE.md  PHASE2_TUI_INTEGRATION_COMPLETE.md  PHASE3_CODE_SUMMARY.md  PHASE3_COMPLETION_REPORT.md  REPAIR_ARCHITECTURE_COMPARISON.md  REPOSITORY_ASSESSMENT_2025-10-28.md  RIFF_UNIFIED.md  ROUTING_PATTERN_GUIDE.md  SEMANTIC_ANALYSIS_COMPLETE.md  STABILIZATION_PLAN.md  START_HERE_ALIGN_VALIDATION.md  START_HERE_NABI_EXPLORATION.md  SURREALDB_CONSOLIDATION_DISCOVERY.md  SURREALDB_QUICK_REFERENCE.md  TESTING_RESULTS_2025-11-04.md  TUI_ENHANCEMENT_COMPLETE.md  WEEK1_COMPLETE.md  _CLI_ARCHITECTURE_DIAGRAM.txt  _RIFF_CLI_ARCHITECTURE_EXPLORATION.md  phase3_verification.sh
.release/: homebrew-formula.rb  riff.spec  riff_cli_wrapper.py
_ORIGINAL_TUI_/riff/: README.md  RIFF_COMPREHENSIVE_REPORT.md  context.md  diagrams.md  fix-claude-jsonl.py  fix-consecutive-users.py  fix-tool-result-missing-jsonl.py  jsonl_tool.py  pyproject.toml  requirements.txt
_ORIGINAL_TUI_/riff/riff/: __init__.py  cli.py  utils.py
_ORIGINAL_TUI_/riff/riff/commands/: fix.py  graph.py  scan.py
_archive/: EXPLORATION_INDEX.md  QUICK_REFERENCE.md
docs/: ANALYSIS_QUICK_REFERENCE.md  ARCHITECTURE.md  BLOCKER_RESOLUTION_GUIDANCE.md  BLOCKER_STATUS_AND_RESOLUTION.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS_2025-10-28.md  CONSOLIDATED_INDEX_AND_LINK_MAPPER.md  CURRENT_STATE_ASSESSMENT_2025-10-22.md  GRAPH_MODULE.md  GRAPH_NAVIGATOR_USAGE.md  HANDOFF_2025-10-20.md  IMMUTABLE_STORE_ARCHITECTURE.md  IMMUTABLE_STORE_VISUAL_SUMMARY.md  INDEX.md  INSTALLATION.md  PATTERNS.md  PHASE6B_IMPLEMENTATION.md  PHASE_6B_IMPLEMENTATION.md  PHASE_6B_INDEX.md  PHASE_6B_INTEGRATION_SUMMARY.md  PHASE_6B_QUICKSTART.md  PHASE_6B_ROADMAP.md  PHASE_6B_STRATEGIC_HANDOFF.md  PHASE_6C_FEDERATION_INTEGRATION_PLAN.md  QUICK_START.md  RECOVERY_ENTITIES_ALIGNMENT.md  RECOVERY_SESSION_INTEGRATION.md  RELEASE_INSTRUCTIONS.md  REPAIR_WORKFLOW.md  RIFF-CLAUDE-EXTENSION.md  SEMANTIC_DAG_DESIGN.md  SESSION_STATUS_2025-10-20.md  START_HERE.md  SURREALDB_INTEGRATION_ANALYSIS.md  SYNC_SURREALDB.md  TIME_FILTERING.md  USAGE.md  VISUALIZER_IMPLEMENTATION.md  WEEK1_COMPLETION.md  XDG_ONBOARDING_GUIDE.md  _ANALYSIS_INDEX.md  (+9 more)
examples/: analyze_session.py  basic-search.sh  batch-search.sh  json-output.sh
infrastructure/: README.md  docker-compose.yml
install/: install.sh  uninstall.sh  zsh-aliases.sh
python/: README.md  pyproject.toml
scripts/: README-AUTO-SYNC.md  com.nabi.riff.sync-index.plist  improved_indexer.py  install-auto-sync.sh  sync-index.sh
session-picker/: README.md  codexr.sh  install.sh
src/: claude_schema.py  index-claude-export.nu  intent_enhancer.py  intent_enhancer_simple.py  riff-claude.nu  riff-enhanced.nu  riff-simple.nu  riff.nu
tests/: DUPLICATE_TESTS_QUICK_START.md  TEST_AUTOMATION_SUMMARY.md  (+13 more)
(+143 files in other folders)
