[project]
name = "riff-interactive"
version = "1.0.0"
description = "Interactive fuzzy search CLI tool for JSONL files"
authors = [
    {name = "Nabia Project"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
riff-interactive = "jsonl_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]